fixed alignment on home page
git-svn-id: https://sourcemap.codebasehq.com/sourcemap/smap.svn/trunk@709 ab0f7204-c6de-4229-9497-6c0baa3b4d53

--- a/www/assets/styles/general.less
+++ b/www/assets/styles/general.less
@@ -218,11 +218,13 @@ body.main{
                 float:left;
                 text-align:center;
                 h2{
+                    padding: 4px 0 4px 35px;
                     font-size: 1.2em;
                     font-weight: normal;
                 }
                 p{
-                    padding: 20px;
+                    padding: 4px 0 4px 35px;
+                    font-size: .7em;
                 }
             }
         }
@@ -253,6 +255,7 @@ body.main{
     ul{
         list-style: none;
         li{
+            font-size: .7em;
             float:left;
             padding: 0 0 20px;
             img{
